= 1.2.0 (2014-12-17)

* Don't override explicit nil :default_encoding template option in the render plugin (jeremyevans)

* Add remaining_path and matched_path request methods (jeremyevans)

* Add slash_path_emty plugin, for considering a path of "/" as empty when doing a terminal match (jeremyevans)

* Remove def_verb_method request class method (jeremyevans)

* Support :add_script_name, :name, :url, and :url_only options when creating named paths in the path plugin (jeremyevans)

* Add match_affix plugin, for overriding default prefix/suffix used in match patterns (jeremyevans)

* Add empty_root plugin, for making root matcher also match empty string (jeremyevans)

* Add roda_class instance methods to RodaRequest and RodaResponse, to DRY up plugin code (jeremyevans)

* Add sinatra_helpers plugin, porting Sinatra::Helpers methods not covered by other plugins (jeremyevans)

* Don't set the default headers until the response is finished (jeremyevans)

* Add RodaRequest#default_redirect_status, so plugins can override the default status used for redirects (jeremyevans)

* Add drop_body plugin, for automatically dropping body and Content-{Length,Type} headers based on response status (jeremyevans)

* Add clear_middleware! class method, for clearing the current middleware (jeremyevans)

* Add inherit_middleware class accessor, allowing users to turn off middleware inheritance (jeremyevans)

* Add multi_run plugin, for dispatching to multiple rack applications based on the request path prefix (jeremyevans)

* Add environments plugin, for handling development/test/production environments (jeremyevans)

* Do not cache templates by default if RACK_ENV is development (jeremyevans)

* Add delay_build plugin, to delay building the rack app until Roda.app is called (jeremyevans)

* Add :user_agent hash matcher to the header_matchers plugin (jeremyevans)

* Fix caching of templates in the render plugin when :opts or :template_class is used (jeremyevans)
